...
    <string name="c_first_start_text">Thank you for choosing Calculator++!\n\nCalculator++ is a powerful tool for making everyday calculations.</string>
    <string name="c_calc_show_release_notes_title">Show release notes</string>
    <string name="c_calc_use_back_button_as_prev_title">Use Back button for previous history</string>
    <string name="c_error">Error</string>
    <string name="c_calc_ad_free_title">Support the project</string>
    <string name="c_calc_ad_free_summary">And remove the advertisement</string>
    <string name="c_conversion_tool">Conversion tool</string>
    <string name="c_convert">Convert to&#8230;</string>
    <string name="convert_to_hex">Convert to hex</string>
    <string name="convert_to_bin">Convert to bin</string>
    <string name="convert_to_dec">Convert to dec</string>
    <string name="other">Other</string>
    <string name="derivatives">Derivatives/Integrals</string>
...
