<?xml version="1.0" encoding="utf-8"?><!--Generated by crowdin.com--><!--Generated by crowdin.net-->
<resources>
    <string name="cpp_wizard_next">Next</string>
    <string name="cpp_wizard_back">Back</string>
    <string name="cpp_wizard_start">Start wizard</string>
    <string name="cpp_wizard_finish">Done</string>
    <string name="cpp_mode_simple">Simple</string>
  <string name="cpp_wizard_mode_simple_description">In simple mode only basic functionality will be available from the
		main screen.
		Result is rounded up to 5 digits, degrees are used as the default angle units.
	</string>
    <string name="cpp_mode_engineer">Engineer</string>
  <string name="cpp_wizard_mode_engineer_description">In engineer mode special functions will be used on the main
		screen.
		Result is not rounded and is presented in engineer notation, radians are used as the default angle units.
	</string>
    <string name="cpp_wizard_dragbutton_action_end">Excellent! Tap the button one more time to try again</string>
    <string name="cpp_wizard_dragbutton_action_center">Tap the button below once to use 9</string>
    <string name="cpp_wizard_dragbutton_action_up">Swipe from the center of the button up to use %</string>
    <string name="cpp_wizard_dragbutton_action_down">Swipe from the center of the button down to use ^2</string>
    <string name="cpp_wizard_welcome_title">Welcome</string>
    <string name="cpp_wizard_mode_title">Choose mode</string>
    <string name="cpp_wizard_theme_title">Choose theme</string>
    <string name="cpp_wizard_onscreen_calculator_title">Calculator in a separate window</string>
    <string name="cpp_wizard_dragbutton_title">Swipe button basics</string>
    <string name="cpp_wizard_final_done">The app is set up and ready to use.</string>
    <string name="cpp_wizard_final_title">Almost done!</string>
  <string name="cpp_wizard_onscreen_description">Calculator in separate window allows you to do calculations while
		using other apps on your device
	</string>
    <string name="cpp_wizard_onscreen_checkbox">Enable</string>
  <string name="cpp_wizard_dragbutton_description">Swipe button is an exclusive feature of Calculator++ which provides
		fast access to the secondary functions
	</string>
    <string name="cpp_wizard_finish_confirmation">Do you really want to finish wizard?</string>
    <string name="cpp_wizard_skip">Skip</string>
    <string name="cpp_wizard_finish_confirmation_title">Finish?</string>
</resources>
